--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -43,12 +40,3 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-/.idea/codeStyles/codeStyleConfig.xml
-/.idea/codeStyles/Project.xml
-/.idea/.gitignore
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/vcs.xml
-/.idea/dictionaries/project.xml
-/.idea/cody_project_settings.xml
-/.idea/kotlinc.xml
